<resources>
    <string name="app_name">MediaLibrary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Media Library</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Display</string>
    <string name="menu_reflow">List</string>
    <string name="menu_publisher">Publisher</string>
    <string name="menu_settings">Settings</string>

    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Item Image</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="no_items_found">No items found</string>
    <string name="no_items_desc">No items</string>
    <string name="no_books_found">No Books Found</string>
    <string name="no_videos_found">No Movies or TV Shows Found</string>
    <string name="no_cds_found">No CDs Found</string>

    <!-- Book Form Strings -->
    <string name="change_cover">Change Cover</string>
    <string name="title_hint">Title</string>
    <string name="author_hint">Author</string>
    <string name="artist_hint">Artist</string>
    <string name="book_type_label">Book Type</string>
    <string name="demographics_label">Demographics (Manga &amp; Light Novel only)</string>
    <string name="select_genres">Select Genres</string>
    <string name="volumes_label">Volumes / Items</string>
    <string name="add_volume">Add Volume</string>
    <string name="save_book">Save Book</string>
    <string name="edit_volume">Edit Volume</string>
    <string name="volume_number_hint">Volume Number</string>
    <string name="volume_title_hint">Volume Title (Optional)</string>
    <string name="owned_label">Owned</string>
    <string name="read_label">Read</string>
    <string name="reading_label">Reading</string>
    <string name="watching_label">Watching</string>
    <string name="format_label">Format</string>
    <string name="save_item">Save Item</string>
    <string name="change_item_cover">Change Item Cover</string>
    <string name="volume_status_format">Owned: %1$s | Read: %2$s</string>
    <string name="movie_status_format">Owned: %1$s | Watched: %2$s</string>
    <string name="Other_volume_status_format">Owned: %1$s</string>
    <string name="volume_info_format">Vol %1$s: %2$s</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="currently_collecting">Currently Collecting</string>
    <string name="music_genre">Music Genre</string>
    <string name="completely_collected">Collected</string>
    <string name="music_tags">Music Tags</string>
    <string name="save_cd">Save Cd</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="type">Type</string>
    <string name="tag">Tags</string>
    <string name="publisher">Publisher</string>
    <string name="genre">Genre</string>
    <string name="collecting">Collecting</string>
    <string name="collected">Collected</string>
    <string name="Ongoing">Ongoing</string>
    <string name="started_collecting">Started Collecting</string>
    <string name="video_tags">Video Category</string>
    <string name="disc_number">Season</string>
    <string name="disc_title">Disc Title</string>
    <string name="watched">Watched</string>
    <string name="select_or_type_an_publisher">Select or type an publisher</string>
    <string name="select_or_type_an_tag">Select or type an Tag</string>
    <string name="movies_and_tv">Movies and TV</string>
    <string name="home">Home</string>
    <string name="books">Books</string>
    <string name="cds">Cds</string>
    <string name="other">Other</string>
    <string name="import_data">Import data</string>
    <string name="export_data">Export data</string>
    <string name="reset_app">Reset App</string>
    <string name="reset_app_confirm_title">Reset App</string>
    <string name="reset_app_confirm_message">Are you sure you want to reset the app? All data will be permanently deleted.</string>
    <string name="cancel">Cancel</string>
    <string name="book_statistics">Book Statistics</string>
    <string name="total_number_of_series">Total Number of Series: %1$d</string>
    <string name="total_number_of_books">Total Number of Books: %1$d</string>
    <string name="total_number_of_dvds">Total Number of Dvds &amp; Blu-rays: %1$d</string>
    <string name="read_percent">Read Percent: %1$d%</string>
    <string name="new_publisher">New Publisher</string>
    <string name="new_tag">New Tag</string>
    <string name="add_item">Add Item</string>
    <string name="save_other_collection">Save Other Collection</string>
    <string name="video_statistics">Video Statistics</string>
    <string name="no_data_available">No Data Available</string>
    <string name="music_statistics">Music Statistics</string>
    <string name="total_cds">Total Cds</string>
    <string name="video_type">Video Type</string>
    <string name="video_tag">Video Category</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="get_list_of_items">Get list of items</string>
    <string name="tools">Tools</string>
    <string name="title">Title</string>
    <string name="other_statistics">Other Statistics</string>
    <string name="filter">filter</string>
    <string name="see_all_books">See All Books</string>
    <string name="see_all_movies_and_tv_shows">See all Movies and TV Shows</string>
    <string name="see_all_cds">See All Cds</string>
    <string name="see_other_items">See other items</string>
    <string name="book_collection_stats">Book Stats</string>
    <string name="book_collection_list">Book Collection</string>
    <string name="media_collection_list">Media Collection</string>
    <string name="music_collection_stats">Music Stats</string>
    <string name="other_collections_currently_collecting">Other - Currently Collecting</string>
    <string name="moive_and_tv_collections_list">Movie &amp; TV Collection</string>
    <string name="other_collections_list">Other Collections</string>
    <string name="music_collection_list">Music Collection</string>
    <string name="music_collection_currently_collecting">Music - Currently Collecting</string>
    <string name="media_collection_currently_collecting">Media - Currently Collecting</string>
    <string name="movie_and_tv_collection_currently_collecting">Movie &amp; TV - Currently Collecting</string>
    <string name="movie_and_tv_collection_stats">Movie &amp; TV Stats</string>
    <string name="book_collection_currently_collecting">Books - Currently Collecting</string>
    <string name="save_movie_or_tv_show">Save Movie or TV Show</string>
    <string name="video_item_display_text">%1$d - %2$s</string>
    <string name="template">template</string>
    <string name="box">☐</string>
    <string name="dual_card_text">%1$s: %2$d</string>
    <string name="total_number_of_books_per_publisher">Total Number of Series per Publisher</string>
    <string name="total_number_of_books_per_genre">Genre Series Count</string>
    <string name="total_number_of_video_per_genre">Total Number of Movies &amp; TV Shows per Genre</string>
    <string name="no_publisher_data_to_display">No Publisher data to display</string>
    <string name="no_genre_data_to_display">No Genre data to display</string>
    <string name="clear_image">Clear Image</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_image_source">Select Image Source</string>
    <string name="collected_label">Collected</string>
    <string name="x">X</string>
    <string name="add_set_or_season">Add Set or Season</string>
    <string name="standalone">Standalone</string>
    <string name="collecting_priority">Collecting Priority</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="sort">Sort</string>
    <string name="priority">Priority</string>
    <string name="itemMediaType">Media Type</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="number_of_cds_by_artist">Number of CDs by Artist</string>
    <string name="no_artist_data_to_display">No artist data to display</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <string name="number">#</string>
    <string name="percent">%</string>
</resources>