<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_display"
            android:icon="@drawable/ic_display"
            android:title="@string/menu_transform" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_reflow" />
        <item
            android:id="@+id/nav_collecting"
            android:icon="@drawable/ic_collecting"
            android:title="@string/collecting" />
        <item
            android:id="@+id/nav_tag"
            android:icon="@drawable/ic_tag"
            android:title="@string/tag" />
    </group>
</menu>