<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_display">

    <fragment
        android:id="@+id/nav_display"
        android:name="com.example.medialibrary.book.ui.display.BookDisplayFragment"
        android:label="@string/book_collection_stats"
        tools:layout="@layout/book_fragment_display" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.medialibrary.book.ui.book_list.BookListFragment"
        android:label="@string/book_collection_list"
        tools:layout="@layout/book_fragment_list" />

    <fragment
        android:id="@+id/nav_publisher"
        android:name="com.example.medialibrary.book.ui.publisher.PublisherListFragment"
        android:label="@string/menu_publisher"
        tools:layout="@layout/publisher_fragment_list" />

    <fragment
        android:id="@+id/nav_collecting"
        android:name="com.example.medialibrary.book.ui.collecting.CollectingBookFragment"
        android:label="@string/book_collection_currently_collecting"
        tools:layout="@layout/book_fragment_collecting" />
</navigation>