<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation3"
    app:startDestination="@+id/nav_display">

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.medialibrary.video.ui.list.VideoListFragment"
        android:label="@string/movie_and_tv_collection_stats"
        tools:layout="@layout/video_fragment_list" />

    <fragment
        android:id="@+id/nav_display"
        android:name="com.example.medialibrary.video.ui.display.VideoDisplayFragment"
        android:label="@string/moive_and_tv_collections_list"
        tools:layout="@layout/video_fragment_display" />

    <fragment
        android:id="@+id/nav_collecting"
        android:name="com.example.medialibrary.video.ui.collecting.CollectingFragment"
        android:label="@string/movie_and_tv_collection_currently_collecting"
        tools:layout="@layout/video_fragment_collecting" />
</navigation>