<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/label_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:padding="8dp"
                android:text="@string/add_set_or_season"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorOnBackground"
                />

            <Button
                android:id="@+id/cancel_button"
                android:src="@android:drawable/ic_menu_crop"
                app:layout_constraintVertical_bias="0.814"
                android:background="@android:color/transparent"
                android:text="@string/x"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:tag="null"/>
        </LinearLayout>

        <include layout="@layout/view_change_image"
            android:id="@+id/image_item_cover"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/disc_number"
            app:boxBackgroundColor="@color/card"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sheet_volume_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="?attr/colorOnBackground" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/disc_title"
            app:boxBackgroundColor="@color/card"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_sheet_volume_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnBackground" />
        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/view_autocomplete_dropdown"
            android:id="@+id/format_autocomplete"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_sheet_owned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/owned_label" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_sheet_watched"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watched" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sheet_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save_item" />

    </LinearLayout>
</layout>