<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_sheet_clear_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/clear_filters" />


        <TextView
            android:id="@+id/text_sheet_type_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/dropdown_sheet_type_book"
            android:text="@string/type"
            android:textAppearance="?attr/textAppearanceCaption" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <AutoCompleteTextView
                android:id="@+id/dropdown_sheet_type_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_sheet_completed_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/completed" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_sheet_collected_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collecting" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_sheet_started_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/started_collecting" />


        <TextView
            android:id="@+id/text_sheet_tag_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/dropdown_sheet_tag_book"
            android:text="@string/tag"
            android:textAppearance="?attr/textAppearanceCaption" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <AutoCompleteTextView
                android:id="@+id/dropdown_sheet_tag_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_sheet_genre_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@id/dropdown_sheet_genre_book"
            android:text="@string/genre"
            android:textAppearance="?attr/textAppearanceCaption" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <AutoCompleteTextView
                android:id="@+id/dropdown_sheet_genre_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_sheet_fitler_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/apply_filter" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>